# sqlite-jsonschema

./: .gitignore  Cargo.toml  Makefile  README.md  VERSION  docs.md
.github/workflows/: release.yaml  rename-wheels.py  test.yaml  upload-deno-assets.js  upload.js
bindings/ruby/: sqlite_jsonschema.gemspec
bindings/ruby/lib/: sqlite_jsonschema.rb  version.rb  version.rb.tmpl
bindings/sqlite-utils/: README.md  pyproject.toml  pyproject.toml.tmpl
bindings/sqlite-utils/sqlite_utils_sqlite_jsonschema/: __init__.py
deno/: README.md  README.md.tmpl  deno.json  deno.json.tmpl  mod.ts  test.ts
npm/: README.md
npm/sqlite-jsonschema/: README.md  package-lock.json  package.json  package.json.tmpl  test.js
npm/sqlite-jsonschema-darwin-arm64/: .gitignore  README.md  package.json
npm/sqlite-jsonschema-darwin-x64/: README.md  package.json
npm/sqlite-jsonschema-linux-x64/: README.md  package.json
npm/sqlite-jsonschema-windows-x64/: README.md  package.json
npm/sqlite-jsonschema/src/: index.js
python/: README.md
python/datasette_sqlite_jsonschema/: README.md  setup.py
python/sqlite_jsonschema/: README.md  setup.py
scripts/: deno_generate_package.sh  npm_generate_platform_packages.sh  site_generate.sh
site/: _config.ts  _data.yaml  _sql.ts  deno.json  examples.md  index.md  reference.md  reference.md.tmpl
site/_includes/: base.njk  navbar.njk
site/static/: script.js  style.css
site/usage/: datasette.md  deno.md  hljs.md  loadable.md  node.md  python.md  source.md  sqlite3.md
src/: jsonschema.rs  lib.rs  meta.rs
tests/: test-loadable.py  test-python.py
(+4 files in other folders)
