[package]
name = "sqlite-rust-starter"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlite3-loadable = {path="../rust-sqlite-exts/sqlite3-loadable"}
sqlite3ext-sys = {path="../rust-sqlite-exts/sqlite3ext-sys"}
jsonschema = {version="0.16.1", default-features = false}
serde_json = "1.0.87"

[lib]
crate-type=["rlib", "cdylib"]
name = "jsonschema0"