[package]
name = "sqlite-jsonschema"
version = "0.2.3-alpha.7"
edition = "2021"
authors = ["Alex Garcia <alexsebastian.garcia@gmail.com>"]
description = "A SQLite extension for validating JSON documents"
homepage = "https://github.com/asg017/sqlite-jsonschema"
repository = "https://github.com/asg017/sqlite-jsonschema"
keywords = ["sqlite", "sqlite-extension"]
license = "MIT/Apache-2.0"

[dependencies]
sqlite-loadable = "0.0.5"
jsonschema = {version="0.16.1", default-features = false}
serde_json = "1.0.87"

[lib]
crate-type=["lib", "staticlib", "cdylib"]
